module(
    name = "rules_qt",
    version = "0.0.4",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.9")

#----------------------------------------------------------------------
# Python toolchain for aqt
#----------------------------------------------------------------------

bazel_dep(name = "rules_python", version = "1.6.3")

PYTHON_VERSION = "3.13.2"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = PYTHON_VERSION)
use_repo(
    python, 
    python_3_13 = "python_3_13_2",
)

pip_rules_qt = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip_rules_qt.parse(
    download_only = True,
    hub_name = "pypi_rules_qt",
    python_version = PYTHON_VERSION,
    requirements_lock = "//bqtinstaller:requirements_lock.txt",
)

use_repo(pip_rules_qt, "pypi_rules_qt")

#----------------------------------------------------------------------

qt = use_extension("@rules_qt//:extensions.bzl", "qt")
qt.fetch()
use_repo(
    qt,
    "qt_linux_x86_64",
    "qt_mac_aarch64",
    "qt_windows_x86_64",
)

register_toolchains(
    "@rules_qt//tools:all",
    dev_dependency = True,
)
