load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
#load("@pip//:requirements.bzl", "requirement")

compile_pip_requirements(
    name = "requirements",
    timeout = "moderate",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

#py_binary(
#    name = "bqtinstaller",
#    srcs = ["bqtinstaller.py"],
#    deps = [requirement("aqtinstall")],
#    visibility = ["//visibility:public"],
#)
