bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_qt")
local_path_override(
    module_name = "rules_qt",
    path = "..",
)

# aqt-based Qt fetching for all platforms
qt_aqt = use_extension("@rules_qt//:extensions.bzl", "qt_aqt")

# Linux x86_64
qt_aqt.install(
    name = "qt_linux_x86_64",
    version = "6.9.0",
    os = "linux",
    target_sdk = "desktop",
    build_file = "@rules_qt//:qt_linux_x86_64.BUILD",
)

# macOS aarch64 (Apple Silicon)
qt_aqt.install(
    name = "qt_mac_aarch64",
    version = "6.9.0",
    os = "mac",
    target_sdk = "desktop",
    build_file = "@rules_qt//:qt_mac_aarch64.BUILD",
)

# Windows x86_64
qt_aqt.install(
    name = "qt_windows_x86_64",
    version = "6.9.0",
    os = "windows",
    target_sdk = "desktop",
    build_file = "@rules_qt//:qt_windows_x86_64.BUILD",
    windows_architecture = "win64_msvc2022_64",
)

use_repo(qt_aqt, "qt_linux_x86_64", "qt_mac_aarch64", "qt_windows_x86_64")

register_toolchains(
    "@rules_qt//tools:all",
    dev_dependency = True,
)
