bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_qt")
local_path_override(
    module_name = "rules_qt",
    path = "..",
)

qt = use_extension("@rules_qt//extension:qt.bzl", "aqt_install")

qt.install(
    name = "qt_linux_x86_64",
    build_file = "//extension:qt/6.4.0/linux_x86_64.BUILD",
    os = "linux",
    version = "6.4.0",
)
use_repo(qt, "qt_6_4_0_linux_x86_64", "qt_linux_x86_64")

#qt = use_extension("@rules_qt//:extensions.bzl", "qt")
#qt.fetch()
#use_repo(
#    qt,
#    "qt_linux_x86_64",
#    "qt_mac_aarch64",
#    "qt_windows_x86_64",
#)

register_toolchains(
    "@rules_qt//tools:all"
)
