package(default_visibility = ["//visibility:public"])

load(":qt_toolchain.bzl", "qt_toolchain")

toolchain_type(name = "toolchain_type")
qt_toolchain(
    name = "qt_linux",
    # TODO: determine paths in qt_configure.bzl
    moc_path = "moc",
    rcc_path = "/opt/Qt/6.2.4/gcc_64/libexec/rcc",
    uic_path = "/opt/Qt/6.2.4/gcc_64/libexec/uic",
)

qt_toolchain(
    name = "qt_windows",
    # TODO: determine paths in qt_configure.bzl
    moc_path = "moc",
    rcc_path = "C:/Qt/6.2.4/msvc2019_64/bin/rcc",
    uic_path = "C:/Qt/6.2.4/msvc2019_64/bin/uic",
)

qt_toolchain(
    name = "qt_osx",
    # TODO: determine paths in qt_configure.bzl
    moc_path = "/usr/local/opt/qt@6/share/qt/libexec/moc",
    rcc_path = "/usr/local/opt/qt@6/share/qt/libexec/rcc",
    uic_path = "/usr/local/opt/qt@6/share/qt/libexec/uic",
)

qt_toolchain(
    name = "qt_osx_M1",
    # TODO: determine paths in qt_configure.bzl
    moc_path = "/opt/homebrew/Cellar/qt/6.3.1_3/share/qt/libexec/moc",
    rcc_path = "/opt/homebrew/Cellar/qt/6.3.1_3/share/qt/libexec/rcc",
    uic_path = "/opt/homebrew/Cellar/qt/6.3.1_3/share/qt/libexec/uic",
)

toolchain(
    name = "qt_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":qt_linux",
    toolchain_type = "@de_vertexwahn_rules_qt6//tools:toolchain_type",
)

toolchain(
    name = "qt_windows_toolchain",
    exec_compatible_with = [
        "@platforms//os:windows",
    ],
    target_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":qt_windows",
    toolchain_type = "@de_vertexwahn_rules_qt6//tools:toolchain_type",
)

toolchain(
    name = "qt_osx_toolchain",
    exec_compatible_with = [
        "@platforms//os:osx",
    ],
    target_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":qt_osx",
    toolchain_type = "@de_vertexwahn_rules_qt6//tools:toolchain_type",
)

toolchain(
    name = "qt_osx_M1_toolchain",
    exec_compatible_with = [
        "@platforms//os:osx",
    ],
    target_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
    ],
    toolchain = ":qt_osx_M1",
    toolchain_type = "@de_vertexwahn_rules_qt6//tools:toolchain_type",
)
