package(default_visibility = ["//visibility:public"])

load(":qt_toolchain.bzl", "qt_toolchain")

toolchain_type(name = "toolchain_type")
qt_toolchain(
    name = "qt_linux",
    moc_cmd = "$(location @qt_6.2.4_linux_desktop_gcc_64//:moc)",
    rcc_cmd = "$(location @qt_6.2.4_linux_desktop_gcc_64//:rcc)",
    uic_cmd = "$(location @qt_6.2.4_linux_desktop_gcc_64//:uic)",
    data = [
        "@qt_6.2.4_linux_desktop_gcc_64//:rcc",
        "@qt_6.2.4_linux_desktop_gcc_64//:uic",
        "@qt_6.2.4_linux_desktop_gcc_64//:moc",
    ],
)


qt_toolchain(
    name = "qt_windows",
    moc_cmd = "$(location @qt_6.4.0_windows_desktop_win64_msvc2019_64//:moc)",
    rcc_cmd = "$(location @qt_6.4.0_windows_desktop_win64_msvc2019_64//:rcc)",
    uic_cmd = "$(location @qt_6.4.0_windows_desktop_win64_msvc2019_64//:uic)",
    data = [
        "@qt_6.4.0_windows_desktop_win64_msvc2019_64//:rcc",
        "@qt_6.4.0_windows_desktop_win64_msvc2019_64//:uic",
        "@qt_6.4.0_windows_desktop_win64_msvc2019_64//:moc",
    ],
)


## osx current use pre installed qt, when ready, change to use download version like linux and windows
qt_toolchain(
    name = "qt_osx",
    moc_cmd = "$(location @qt_6.2.4_mac_desktop_clang_64//:moc)",
    rcc_cmd = "$(location @qt_6.2.4_mac_desktop_clang_64//:rcc)",
    uic_cmd = "$(location @qt_6.2.4_mac_desktop_clang_64//:uic)",
    data = [
        "@qt_6.2.4_mac_desktop_clang_64//:rcc",
        "@qt_6.2.4_mac_desktop_clang_64//:uic",
        "@qt_6.2.4_mac_desktop_clang_64//:moc",
    ],
)

qt_toolchain(
    name = "qt_osx_M1",
    moc_cmd = "$(location @qt_6.4.0_mac_desktop_clang_64_M1//:moc)",
    rcc_cmd = "$(location @qt_6.4.0_mac_desktop_clang_64_M1//:rcc)",
    uic_cmd = "$(location @qt_6.4.0_mac_desktop_clang_64_M1//:uic)",
    data = [
        "@qt_6.4.0_mac_desktop_clang_64_M1//:rcc",
        "@qt_6.4.0_mac_desktop_clang_64_M1//:uic",
        "@qt_6.4.0_mac_desktop_clang_64_M1//:moc",
    ],
)

toolchain(
    name = "qt_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":qt_linux",
    toolchain_type = "@rules_qt//tools:toolchain_type",
)

toolchain(
    name = "qt_windows_toolchain",
    exec_compatible_with = [
        "@platforms//os:windows",
    ],
    target_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":qt_windows",
    toolchain_type = "@rules_qt//tools:toolchain_type",
)

toolchain(
    name = "qt_osx_toolchain",
    exec_compatible_with = [
        "@platforms//os:osx",
    ],
    target_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":qt_osx",
    toolchain_type = "@rules_qt//tools:toolchain_type",
)

toolchain(
    name = "qt_osx_M1_toolchain",
    exec_compatible_with = [
        "@platforms//os:osx",
    ],
    target_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:arm64",
    ],
    toolchain = ":qt_osx_M1",
    toolchain_type = "@rules_qt//tools:toolchain_type",
)
