load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_qt//:qt.bzl", "qt_cc_binary", "qt_cc_library")

qt_cc_library(
    name = "combined",
    srcs = [
        "bar.cpp",
        "foo.cpp",
    ],
    hdrs = [
        "bar.hpp",
        "foo.hpp",
    ],
    deps = [
        "@rules_qt//:qt",
    ],
)

qt_cc_library(
    name = "fuzzbuzz",
    srcs = [
        "multiple_mocs.cpp",
    ],
    hdrs = [
        "multiple_mocs.hpp",
    ],
    deps = [
        "@rules_qt//:qt",
    ],
)

cc_binary(
    name = "main",
    srcs = [
        "main.cpp",
    ],
    deps = [
        ":combined",
        ":fuzzbuzz",
        "@rules_qt//:qt",
    ],
)
