load("@rules_qt//:qt.bzl", "qt_cc_library", "qt_cc_test")

qt_cc_library(
    name = "test_lib",
    srcs = ["test_regex.cpp"],
    hdrs = ["test_regex.h"],
    deps = [
        "@rules_qt//:qt_core",
        "@rules_qt//:qt_test",
    ],
)

qt_cc_test(
    name = "main",
    srcs = [],
    deps = [
        ":test_lib",
    ],
)
